Fixes spacing issue

--- a/src/components/Office/ShipmentForm/ShipmentForm.module.scss
+++ b/src/components/Office/ShipmentForm/ShipmentForm.module.scss
@@ -40,6 +40,10 @@
     @include u-margin-bottom(3);
   }
 
+  .NoSpacing {
+    @include u-margin-bottom(0);
+  }
+
   .AdvanceText {
     @include u-font-size('body', 'xs');
     @include u-margin-top(2.5);
